kagent: add memory for v2-preview docs to crossplane agent

--- a/ai/kagent/config/crossplane-composition-fixer.yaml
+++ b/ai/kagent/config/crossplane-composition-fixer.yaml
@@ -34,6 +34,7 @@ spec:
 
 
     Always provide detailed error analysis and clear fix explanations.
+  memory: ["crossplane-docs-memory"]
   tools:
   - type: McpServer
     mcpServer:
