--- a/ai/kagent/config/crossplane-composition-fixer.yaml
+++ b/ai/kagent/config/crossplane-composition-fixer.yaml
@@ -35,10 +35,10 @@ spec:
     Always provide detailed error analysis and clear fix explanations.
   memory: ["crossplane-docs-memory"]
   tools:
-  - type: McpServer
-    mcpServer:
-      toolServer: mcp-website-fetcher
-      toolNames: ["fetch"]
+  #- type: McpServer
+  #  mcpServer:
+  #    toolServer: mcp-website-fetcher
+  #    toolNames: ["fetch"]
   - type: Agent
     agent:
       ref: k8s-agent
