Crossplane fixer kagent connected to k8s agent and Memory (#12)
* github: test provider per namespace via DeploymentRuntimeConfig

* infra: bump container-beta provider to v0.5.1

* github: demo labels and annotations in deploymentRuntimeConfig

* kagent: add k8s agent to crossplain agent

* kagent: add memory for v2-preview docs to crossplane agent

* kagent: RBAC for crossplane and github resources

* kagent: update prompt to use memory instead of web fetch

* kagent: remove website fetcher tool it confuses the agent

--- a/ai/kagent/config/crossplane-composition-fixer.yaml
+++ b/ai/kagent/config/crossplane-composition-fixer.yaml
@@ -29,26 +29,20 @@ spec:
     - platform/ contains compositions and configurations
     - Use ArgoCD ApplicationSets for deployment
 
-    Always provide detailed error analysis and clear fix explanations.
-  tools:
-  - type: McpServer
-    mcpServer:
-      toolServer: mcp-website-fetcher
-      toolNames: ["fetch"]
+    The project uses Crossplane v2-preview. Use configured Memory to browse documentation for this version of Crossplane
 
-# ---
-# apiVersion: kagent.dev/v1alpha1
-# kind: ToolServer
-# metadata:
-#   name: argo-app-status
-#   namespace: kagent
-# spec:
-#   description: "Retrieve ArgoCD application status for monitoring sync failures"
-#   config:
-#     sse:
-#       url: http://argo-app-status.kagent.svc.cluster.local/sse
-#
-# ---
+
+    Always provide detailed error analysis and clear fix explanations.
+  memory: ["crossplane-docs-memory"]
+  tools:
+  #- type: McpServer
+  #  mcpServer:
+  #    toolServer: mcp-website-fetcher
+  #    toolNames: ["fetch"]
+  - type: Agent
+    agent:
+      ref: k8s-agent
+---
 # apiVersion: kagent.dev/v1alpha1
 # kind: ToolServer
 # metadata:
@@ -66,7 +60,7 @@ metadata:
   name: mcp-website-fetcher
   namespace: kagent-system
 spec:
-  description: "Test - website fetcher"
+  description: "website fetcher"
   config:
     sse:
       url: http://mcp-website-fetcher.kagent.svc.cluster.local/sse
