--- a/infra-setup/crossplane-config/claims/apps-cluster-claim.yaml
+++ b/infra-setup/crossplane-config/claims/apps-cluster-claim.yaml
@@ -19,8 +19,8 @@ spec:
     # ArgoCD agent configuration (minimal for apps clusters)
     argocd:
       enabled: true
-      version: "v2.14.10"
-      chartVersion: "7.8.26"
+      version: "v3.1.0-rc1"
+      chartVersion: "8.1.2"
 
     # No Crossplane on apps clusters
     crossplane:
