--- a/infra-setup/crossplane-config/claims/mgmt-cluster-claim.yaml
+++ b/infra-setup/crossplane-config/claims/mgmt-cluster-claim.yaml
@@ -19,8 +19,8 @@ spec:
     # ArgoCD configuration
     argocd:
       enabled: true
-      version: "v2.14.10"
-      chartVersion: "7.8.26"
+      version: "v3.1.0-rc1"
+      chartVersion: "8.1.2"
       repoUrl: "https://github.com/${GITHUB_DEMO_REPO_OWNER}/${GITHUB_DEMO_REPO_NAME}.git"
       repoToken: "${GITHUB_DEMO_REPO_PAT}"
       repoOwner: "${GITHUB_DEMO_REPO_OWNER}"
