--- a/tasks/setup.yaml
+++ b/tasks/setup.yaml
@@ -14,3 +14,8 @@ tasks:
     desc: "Cleanup infrastructure (forcefull)"
     cmds:
       - "{{.TASKFILE_DIR}}/infra-setup/00-cleanup.sh"
+
+  delete-kind:
+    desc: "I never get this right :/"
+    cmds:
+      - kind delete cluster --name kind-test-cluster
