--- a/infra-setup/flux-crossplane/base/rbac/kustomization.yaml
+++ b/infra-setup/flux-crossplane/base/rbac/kustomization.yaml
@@ -1,4 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
 resources:
-  - crossplane-source.yaml
+  - crossplane-namespace-rbac.yaml
+  - helm-provider-rbac.yaml
