--- a/infra-setup/flux-crossplane/claims/kustomization.yaml
+++ b/infra-setup/flux-crossplane/claims/kustomization.yaml
@@ -1,4 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
 resources:
-  - crossplane-source.yaml
+  - mgmt-cluster-claim.yaml
+  - apps-cluster-claim.yaml
